@@ -1,5 +1,7 @@
 2006-01-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/relocate.cc (setup_paths): mingw uses std string too.
+
 	* lily/*.cc: various fixes for substr(ARG).
 
 	* lily/sustain-pedal.cc (print): 
